# lab-os

./: .gitignore  BOOTSTRAP.md  PR-LIFECYCLE.md  README.md  TROUBLESHOOTING.md  WORKING-WITH-CLAUDE.md  project_log.md
.claude/rules/: 01-workflow.md  02-data-protection.md  03-logging-and-docs.md  04-docs.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: friction.yml
.github/workflows/: deploy-site.yml  docs-budget.yml  log-lint.yml  merge-bar-check.yml  standards.yml
docs/superpowers/plans/: 2026-06-10-logging-and-docs-standard.md  2026-06-11-lab-os-rename-handbook-site.md  (+3 more)
scripts/: docs_budget.py  log_lint.py  merge_bar_check.py
site/: AUTHORING.md  docusaurus.config.ts  sidebars.ts
site/docs/: getting-started.md  getting-started.mdx  onboarding-project.md  play-testing.md  repo-setup.md  rules-explained.md  tooling-tour.md  working-with-claude.md
site/docs/workshops/: index.md
templates/: PRD.template.md  dev-root-CLAUDE.template.md  global-CLAUDE.template.md  project_log.template.md  repo-CLAUDE.template.md
templates/desktop-control-panel/app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
templates/desktop-control-panel/app/src-tauri/resources/: allophone_map_v1.json  model_vocab_v1.json  threshold_table_v1.json
templates/desktop-control-panel/app/src-tauri/src/: lib.rs
templates/desktop-control-panel/app/src-tauri/src/evaluation/: alignment.rs  allophones.rs  chunk_orchestrator.rs  commands.rs  ctc_decode.rs  error.rs  feedback.rs  mod.rs  model_download.rs  orchestrator.rs  phonemizer.rs  reference_ipa.rs  thresholds.rs
templates/desktop-control-panel/app/src-tauri/src/recording/: buffer.rs  commands.rs  cpal_adapter.rs  error.rs  mod.rs  resample.rs  session.rs
templates/desktop-control-panel/app/src-tauri/src/reporting/: commands.rs  mod.rs
templates/desktop-control-panel/app/src-tauri/src/settings/: commands.rs  mod.rs
templates/desktop-control-panel/app/src-tauri/src/shared/: config.rs  error.rs  log.rs  types.rs
templates/desktop-control-panel/app/src-tauri/src/storage/: commands.rs  connection.rs  migrations.rs  mod.rs
templates/desktop-control-panel/app/src-tauri/src/storage/migrations/: 001_init.sql  003_feedback.sql
templates/desktop-control-panel/app/src-tauri/src/update/: commands.rs
templates/work-bundle/: design.template.md  plan.template.md
tests/docs_budget/: README.md
tests/log_lint/: manifest.json
tools/: README.md  build_deck.py
(+145 files in other folders)
